--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
 
         <!-- Site Description -->
         <div class="presentation container">
-            <h2>We are <span>Andia</span>, a super cool design agency.</h2>
-            <p>We design beautiful websites, logos and prints. Your project is safe with us.</p>
+            <h2>We are <span>Luxury Werehouse</span></h2>
+            <p>We have one simple goal: to create a home for your ‘toys’ and a place to enjoy them</p>
         </div>
 
         <!-- Services -->
