--- a/index.html
+++ b/index.html
@@ -87,26 +87,26 @@
                             <ul class="slides">
                                 <li data-thumb="assets/img/slider/1.jpg">
                                     <img src="assets/img/slider/1.jpg">
-                                    <p class="flex-caption">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Lorem ipsum dolor sit amet, consectetur.</p>
+                                    <p class="flex-caption">We have one simple goal: to create a home for your ‘toys’ and a place to enjoy them</p>
                                 </li>
                                 <li data-thumb="assets/img/slider/2.jpg">
                                     <img src="assets/img/slider/2.jpg">
-                                    <p class="flex-caption">Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+                                    <p class="flex-caption">We have one simple goal: to create a home for your ‘toys’ and a place to enjoy them</p>
                                 </li>
                                 <li data-thumb="assets/img/slider/6.jpg">
                                     <img src="assets/img/slider/6.jpg">
-                                    <p class="flex-caption">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Lorem ipsum dolor sit amet, consectetur.</p>
+                                    <p class="flex-caption">We have one simple goal: to create a home for your ‘toys’ and a place to enjoy them</p>
                                 </li>
                                 <li data-thumb="assets/img/slider/4.jpg">
                                     <img src="assets/img/slider/4.jpg">
-                                    <p class="flex-caption">Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+                                    <p class="flex-caption">We have one simple goal: to create a home for your ‘toys’ and a place to enjoy them</p>
                                 </li> <li data-thumb="assets/img/slider/3.jpg">
                                     <img src="assets/img/slider/3.jpg">
-                                    <p class="flex-caption">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Lorem ipsum dolor sit amet, consectetur.</p>
+                                    <p class="flex-caption">We have one simple goal: to create a home for your ‘toys’ and a place to enjoy them</p>
                                 </li>
                                 <li data-thumb="assets/img/slider/5.jpg">
                                     <img src="assets/img/slider/5.jpg">
-                                    <p class="flex-caption">Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+                                    <p class="flex-caption">We have one simple goal: to create a home for your ‘toys’ and a place to enjoy them</p>
                                 </li>
 
                             </ul>
