--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                         <div class="tab-content">
                             <div class="tab-pane active" id="A">
                                 <img src="assets/img/testimonials/1.jpg" title="" alt="">
-                                <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Lorem ipsum dolor sit amet, consectetur..."<br /><span class="violet">Lorem Ipsum, dolor.co.uk</span></p>
+                                <p>"Luxury Werehouseis a great concept. My wife and I owned various small businesses in Spring since 1994. In that time frame we literally threw away $50,000.00 in rent payments. Now that we are owners at the Oasis, it is like putting money in the bank. The facilities are extra clean, secure and the management is professional..."<br /><span class="violet">Ken - Owner Since December 2010</span></p>
                             </div>
                             <div class="tab-pane" id="B">
                                 <img src="assets/img/testimonials/2.jpg" title="" alt="">
