cambio en testimonios

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 <div class="work span3">
                     <img src="assets/img/portfolio/bus-boat.jpg" alt="">
                     <h4>RV AND MOTORCOACH</h4>
-                    <p>Let us provide a Houston "home" for your luxury motor coach and protect your investment while you are not enjoying the open road. ..</p>
+                    <p>Let us provide a "home" for your luxury motor coach and protect your investment while you are not enjoying the open road. ..</p>
                     <div class="icon-awesome">
                         <a href="assets/img/portfolio/bus-boat.jpg" rel="prettyPhoto"><i class="icon-search"></i></a>
                         <a href="portfolio.html"><i class="icon-link"></i></a>
@@ -220,15 +220,15 @@
                             </div>
                             <div class="tab-pane" id="B">
                                 <img src="assets/img/testimonials/2.jpg" title="" alt="">
-                                <p>"Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat..."<br /><span class="violet">Minim Veniam, nostrud.com</span></p>
+                                <p>"Before Luxury Werehouse I was looking for a stand alone garage or adding a couple of garages to my home. Oasis was my best choice because it solved two big issues for me. I didn't have to worry about security , which is a problem with a stand alone garage and I didn't have to worry about moving and not being able to get the cost of an additional 3 garages out of the next buyer of my house. It fit my needs just right..."<br /><span class="violet">Mike - Owner Since September 2007</span></p>
                             </div>
                             <div class="tab-pane" id="C">
                                 <img src="assets/img/testimonials/3.jpg" title="" alt="">
-                                <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Lorem ipsum dolor sit amet, consectetur..."<br /><span class="violet">Lorem Ipsum, dolor.co.uk</span></p>
+                                <p>"We bought the garage condo at Luxury Werehouse because we downsized from small acreage with a large garage and storage area to a patio home. We were not interested in locating property and dealing with constructing and maintaining our own building. Garage Oasis is close to home, provides the climate controlled storage we want and the work space we need. Our neighbors are friendly, trustworthy and have interesting hobbies. Garage Oasis is a useful and fun place; well maintained and simple to own..."<br /><span class="violet">Allan - Owner Since November 2008</span></p>
                             </div>
                             <div class="tab-pane" id="D">
                                 <img src="assets/img/testimonials/1.jpg" title="" alt="">
-                                <p>"Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat..."<br /><span class="violet">Minim Veniam, nostrud.com</span></p>
+                                <p>"The concept is wonderful. It is a great place to meet people that have some of the same hobby interests that I have. It is clean, well lit with great security. It's my ‘home away from home..."<br /><span class="violet">Jeff - Owner Since January 2011</span></p>
                             </div>
                         </div>
                        <ul class="nav nav-tabs">
