cambio en el navbar
cambio de texto del navbar, en lugar de portafolio, debe decir Gallery,
se cambió el icono de link por el icono plus.

--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
                                         <a href="index.html"><i class="icon-home"></i><br />Home</a>
                                     </li>
                                     <li>
-                                        <a href="portfolio.html"><i class="icon-camera"></i><br />Portfolio</a>
+                                        <a href="portfolio.html"><i class="icon-camera"></i><br />Gallery</a>
                                     </li>
                                     <li>
-                                        <a href="#"><i class="icon-comments"></i><br />Blog</a>
+                                        <a href="#"><i class="icon-comments"></i><br />Testimonials</a>
                                     </li>
                                     <li>
                                         <a href="services.html"><i class="icon-tasks"></i><br />Services</a>
@@ -172,7 +172,7 @@
                     <p>Let us provide a "home" for your luxury motor coach and protect your investment while you are not enjoying the open road. ..</p>
                     <div class="icon-awesome">
                         <a href="assets/img/portfolio/bus-boat.jpg" rel="prettyPhoto"><i class="icon-search"></i></a>
-                        <a href="portfolio.html"><i class="icon-link"></i></a>
+                        <a href="portfolio.html"><i class="icon-plus"></i></a>
                     </div>
                 </div>
                 <div class="work span3">
@@ -181,7 +181,7 @@
                     <p>Luxury werehouse is the premier community for car collectors in Houston. It was designed to enhance your passion for car collecting...</p>
                     <div class="icon-awesome">
                         <a href="assets/img/portfolio/collection-car.jpg" rel="prettyPhoto"><i class="icon-search"></i></a>
-                        <a href="portfolio.html"><i class="icon-link"></i></a>
+                        <a href="portfolio.html"><i class="icon-plus"></i></a>
                     </div>
                 </div>
                 <div class="work span3">
@@ -190,7 +190,7 @@
                     <p>Luxury werehouse serves a wide variety of business uses for owners in the Houston area. A business owner can scale back rental costs ...</p>
                     <div class="icon-awesome">
                         <a href="assets/img/portfolio/business.jpg" rel="prettyPhoto"><i class="icon-search"></i></a>
-                        <a href="portfolio.html"><i class="icon-link"></i></a>
+                        <a href="portfolio.html"><i class="icon-plus"></i></a>
                     </div>
                 </div>
                 <div class="work span3">
@@ -199,7 +199,7 @@
                     <p>Luxury were house serves a wide variety of business uses for owners in the Houston area. A business owner can scale back rental costs ...</p>
                     <div class="icon-awesome">
                         <a href="assets/img/portfolio/club-house.jpg" rel="prettyPhoto"><i class="icon-search"></i></a>
-                        <a href="portfolio.html"><i class="icon-link"></i></a>
+                        <a href="portfolio.html"><i class="icon-plus"></i></a>
                     </div>
                 </div>
             </div>
