cambio de texto
El texto correcto es warehouse, anteriormente se usó werehose.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <head>
 
         <meta charset="utf-8">
-        <title>Luxury werehose</title>
+        <title>Luxury warehose</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="">
         <meta name="author" content="">
@@ -118,7 +118,7 @@
 
         <!-- Site Description -->
         <div class="presentation container">
-            <h2>We are <span>Luxury Werehouse</span></h2>
+            <h2>We are <span>Luxury Warehouse</span></h2>
             <p>We have one simple goal: to create a home for your ‘toys’ and a place to enjoy them</p>
         </div>
 
@@ -178,7 +178,7 @@
                 <div class="work span3">
                     <img src="assets/img/portfolio/collection-car.jpg" alt="">
                     <h4>CAR COLLECTOR</h4>
-                    <p>Luxury werehouse is the premier community for car collectors in Houston. It was designed to enhance your passion for car collecting...</p>
+                    <p>Luxury warehouse is the premier community for car collectors in Houston. It was designed to enhance your passion for car collecting...</p>
                     <div class="icon-awesome">
                         <a href="assets/img/portfolio/collection-car.jpg" rel="prettyPhoto"><i class="icon-search"></i></a>
                         <a href="portfolio.html"><i class="icon-plus"></i></a>
@@ -187,7 +187,7 @@
                 <div class="work span3">
                     <img src="assets/img/portfolio/business.jpg" alt="">
                     <h4>Business</h4>
-                    <p>Luxury werehouse serves a wide variety of business uses for owners in the Houston area. A business owner can scale back rental costs ...</p>
+                    <p>Luxury warehouse serves a wide variety of business uses for owners in the Houston area. A business owner can scale back rental costs ...</p>
                     <div class="icon-awesome">
                         <a href="assets/img/portfolio/business.jpg" rel="prettyPhoto"><i class="icon-search"></i></a>
                         <a href="portfolio.html"><i class="icon-plus"></i></a>
@@ -196,7 +196,7 @@
                 <div class="work span3">
                     <img src="assets/img/portfolio/club-house.jpg" alt="">
                     <h4>CLUB HOUSE</h4>
-                    <p>Luxury were house serves a wide variety of business uses for owners in the Houston area. A business owner can scale back rental costs ...</p>
+                    <p>Luxury ware house serves a wide variety of business uses for owners in the Houston area. A business owner can scale back rental costs ...</p>
                     <div class="icon-awesome">
                         <a href="assets/img/portfolio/club-house.jpg" rel="prettyPhoto"><i class="icon-search"></i></a>
                         <a href="portfolio.html"><i class="icon-plus"></i></a>
@@ -216,15 +216,15 @@
                         <div class="tab-content">
                             <div class="tab-pane active" id="A">
                                 <img src="assets/img/testimonials/1.jpg" title="" alt="">
-                                <p>"Luxury Werehouseis a great concept. My wife and I owned various small businesses in Spring since 1994. In that time frame we literally threw away $50,000.00 in rent payments. Now that we are owners at the Oasis, it is like putting money in the bank. The facilities are extra clean, secure and the management is professional..."<br /><span class="violet">Ken - Owner Since December 2010</span></p>
+                                <p>"Luxury Warehouseis a great concept. My wife and I owned various small businesses in Spring since 1994. In that time frame we literally threw away $50,000.00 in rent payments. Now that we are owners at the Oasis, it is like putting money in the bank. The facilities are extra clean, secure and the management is professional..."<br /><span class="violet">Ken - Owner Since December 2010</span></p>
                             </div>
                             <div class="tab-pane" id="B">
                                 <img src="assets/img/testimonials/2.jpg" title="" alt="">
-                                <p>"Before Luxury Werehouse I was looking for a stand alone garage or adding a couple of garages to my home. Oasis was my best choice because it solved two big issues for me. I didn't have to worry about security , which is a problem with a stand alone garage and I didn't have to worry about moving and not being able to get the cost of an additional 3 garages out of the next buyer of my house. It fit my needs just right..."<br /><span class="violet">Mike - Owner Since September 2007</span></p>
+                                <p>"Before Luxury Warehouse I was looking for a stand alone garage or adding a couple of garages to my home. Oasis was my best choice because it solved two big issues for me. I didn't have to worry about security , which is a problem with a stand alone garage and I didn't have to worry about moving and not being able to get the cost of an additional 3 garages out of the next buyer of my house. It fit my needs just right..."<br /><span class="violet">Mike - Owner Since September 2007</span></p>
                             </div>
                             <div class="tab-pane" id="C">
                                 <img src="assets/img/testimonials/3.jpg" title="" alt="">
-                                <p>"We bought the garage condo at Luxury Werehouse because we downsized from small acreage with a large garage and storage area to a patio home. We were not interested in locating property and dealing with constructing and maintaining our own building. Garage Oasis is close to home, provides the climate controlled storage we want and the work space we need. Our neighbors are friendly, trustworthy and have interesting hobbies. Garage Oasis is a useful and fun place; well maintained and simple to own..."<br /><span class="violet">Allan - Owner Since November 2008</span></p>
+                                <p>"We bought the garage condo at Luxury Warehouse because we downsized from small acreage with a large garage and storage area to a patio home. We ware not interested in locating property and dealing with constructing and maintaining our own building. Garage Oasis is close to home, provides the climate controlled storage we want and the work space we need. Our neighbors are friendly, trustworthy and have interesting hobbies. Garage Oasis is a useful and fun place; well maintained and simple to own..."<br /><span class="violet">Allan - Owner Since November 2008</span></p>
                             </div>
                             <div class="tab-pane" id="D">
                                 <img src="assets/img/testimonials/1.jpg" title="" alt="">
