--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <head>
 
         <meta charset="utf-8">
-        <title>Andia - Responsive Agency Template</title>
+        <title>Luxury warehose</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="">
         <meta name="author" content="">
@@ -56,13 +56,13 @@
                                         <a href="index.html"><i class="icon-home"></i><br />Home</a>
                                     </li>
                                     <li class="current-page">
-                                        <a href="portfolio.html"><i class="icon-camera"></i><br />Portfolio</a>
+                                        <a href="portfolio.html"><i class="icon-camera"></i><br />Gallery</a>
                                     </li>
                                     <li>
-                                        <a href="#"><i class="icon-comments"></i><br />Blog</a>
+                                        <a href="#"><i class="icon-comments"></i><br />Testimonials</a>
                                     </li>
                                     <li>
-                                        <a href="services.html"><i class="icon-tasks"></i><br />Services</a>
+                                        <a href="services.html"><i class="icon-tasks"></i><br />Uses</a>
                                     </li>
                                     <li>
                                         <a href="about.html"><i class="icon-user"></i><br />About</a>
@@ -84,7 +84,7 @@
                 <div class="row">
                     <div class="span12">
                         <i class="icon-camera page-title-icon"></i>
-                        <h2>Portfolio /</h2>
+                        <h2>Gallery /</h2>
                         <p>Here is the work we've done so far</p>
                     </div>
                 </div>
@@ -94,21 +94,14 @@
         <!-- Portfolio -->
         <div class="portfolio portfolio-page container">
             <div class="row">
-                <div class="portfolio-navigator span12">
-                    <h4 class="filter-portfolio">
-                        <a class="all" id="active-imgs" href="#">All</a> /
-                        <a class="web-design" id="" href="#">Web Design</a> /
-                        <a class="logo-design" id="" href="#">Logo Design</a> /
-                        <a class="print-design" id="" href="#">Print Design</a>
-                    </h4>
-                </div>
+                
             </div>
             <div class="row">
                 <ul class="portfolio-img">
                     <li data-id="p-1" data-type="web-design" class="span3">
                         <div class="work">
-                            <a href="assets/img/portfolio/work1.jpg" rel="prettyPhoto">
-                                <img src="assets/img/portfolio/work1.jpg" alt="">
+                            <a href="assets/img/portfolio/bus-boat.jpg" rel="prettyPhoto">
+                                <img src="assets/img/portfolio/bus-boat.jpg" alt="">
                             </a>
                             <h4>Lorem Website</h4>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
@@ -116,8 +109,8 @@
                     </li>
                     <li data-id="p-2" data-type="logo-design" class="span3">
                         <div class="work">
-                            <a href="assets/img/portfolio/work2.jpg" rel="prettyPhoto">
-                                <img src="assets/img/portfolio/work2.jpg" alt="">
+                            <a href="assets/img/portfolio/business.jpg" rel="prettyPhoto">
+                                <img src="assets/img/portfolio/business.jpg" alt="">
                             </a>
                             <h4>Ipsum Logo</h4>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
@@ -125,8 +118,8 @@
                     </li>
                     <li data-id="p-3" data-type="print-design" class="span3">
                         <div class="work">
-                            <a href="assets/img/portfolio/work3.jpg" rel="prettyPhoto">
-                                <img src="assets/img/portfolio/work3.jpg" alt="">
+                            <a href="assets/img/portfolio/club-house.jpg" rel="prettyPhoto">
+                                <img src="assets/img/portfolio/club-house.jpg" alt="">
                             </a>
                             <h4>Dolor Prints</h4>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
@@ -134,8 +127,8 @@
                     </li>
                     <li data-id="p-4" data-type="web-design" class="span3">
                         <div class="work">
-                            <a href="assets/img/portfolio/work4.jpg" rel="prettyPhoto">
-                                <img src="assets/img/portfolio/work4.jpg" alt="">
+                            <a href="assets/img/portfolio/luxury-gate.jpg" rel="prettyPhoto">
+                                <img src="assets/img/portfolio/luxury-gate.jpg" alt="">
                             </a>
                             <h4>Sit Amet Website</h4>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
@@ -143,8 +136,8 @@
                     </li>
                     <li data-id="p-5" data-type="logo-design" class="span3">
                         <div class="work">
-                            <a href="assets/img/portfolio/work5.jpg" rel="prettyPhoto">
-                                <img src="assets/img/portfolio/work5.jpg" alt="">
+                            <a href="assets/img/portfolio/collection-car.jpg" rel="prettyPhoto">
+                                <img src="assets/img/portfolio/collection-car.jpg" alt="">
                             </a>
                             <h4>Consectetur Logo</h4>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
@@ -152,8 +145,8 @@
                     </li>
                     <li data-id="p-6" data-type="print-design" class="span3">
                         <div class="work">
-                            <a href="assets/img/portfolio/work6.jpg" rel="prettyPhoto">
-                                <img src="assets/img/portfolio/work6.jpg" alt="">
+                            <a href="assets/img/portfolio/panoramical.jpg" rel="prettyPhoto">
+                                <img src="assets/img/portfolio/panoramical.jpg" alt="">
                             </a>
                             <h4>Adipisicing Print</h4>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
@@ -161,8 +154,8 @@
                     </li>
                     <li data-id="p-7" data-type="web-design" class="span3">
                         <div class="work">
-                            <a href="assets/img/portfolio/work7.jpg" rel="prettyPhoto">
-                                <img src="assets/img/portfolio/work7.jpg" alt="">
+                            <a href="assets/img/portfolio/aerea.jpg" rel="prettyPhoto">
+                                <img src="assets/img/portfolio/aerea.jpg" alt="">
                             </a>
                             <h4>Elit Website</h4>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
@@ -170,8 +163,8 @@
                     </li>
                     <li data-id="p-8" data-type="print-design" class="span3">
                         <div class="work">
-                            <a href="assets/img/portfolio/work8.jpg" rel="prettyPhoto">
-                                <img src="assets/img/portfolio/work8.jpg" alt="">
+                            <a href="assets/img/portfolio/aerea2.jpg" rel="prettyPhoto">
+                                <img src="assets/img/portfolio/aerea2.jpg" alt="">
                             </a>
                             <h4>Sed Do Prints</h4>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
@@ -236,10 +229,11 @@
                     </div>
                     <div class="widget span3">
                         <h4>Contact Us</h4>
-                        <p><i class="icon-map-marker"></i> Address: Via Principe Amedeo 9, 10100, Torino, TO, Italy</p>
-                        <p><i class="icon-phone"></i> Phone: 0039 333 12 68 347</p>
-                        <p><i class="icon-user"></i> Skype: Andia_Agency</p>
-                        <p><i class="icon-envelope-alt"></i> Email: <a href="">contact@andia.co.uk</a></p>
+                        <p><i class="icon-map-marker"></i> Address: Houston Texas</p>
+                        <p><i class="icon-phone"></i> Phone: 01800 luxurywerehouse</p>
+                        <p><i class="icon-user"></i> Skype: luxurywarehouse</p>
+                        <p><i class="icon-envelope-alt"></i> Email: <a href="">info@luxurywerehousestorage.com</a></p>
+                    </div>
                     </div>
                 </div>
                 <div class="footer-border"></div>
