--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <head>
 
         <meta charset="utf-8">
-        <title>Andia - Responsive Agency Template</title>
+        <title>Luxury warehose</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="">
         <meta name="author" content="">
@@ -56,13 +56,13 @@
                                         <a href="index.html"><i class="icon-home"></i><br />Home</a>
                                     </li>
                                     <li>
-                                        <a href="portfolio.html"><i class="icon-camera"></i><br />Portfolio</a>
+                                        <a href="portfolio.html"><i class="icon-camera"></i><br />Gallery</a>
                                     </li>
                                     <li>
-                                        <a href="#"><i class="icon-comments"></i><br />Blog</a>
+                                        <a href="#"><i class="icon-comments"></i><br />Testimonials</a>
                                     </li>
                                     <li>
-                                        <a href="services.html"><i class="icon-tasks"></i><br />Services</a>
+                                        <a href="services.html"><i class="icon-tasks"></i><br />Uses</a>
                                     </li>
                                     <li>
                                         <a href="about.html"><i class="icon-user"></i><br />About</a>
@@ -137,10 +137,11 @@
                     </div>
                     <div class="widget span3">
                         <h4>Contact Us</h4>
-                        <p><i class="icon-map-marker"></i> Address: Via Principe Amedeo 9, 10100, Torino, TO, Italy</p>
-                        <p><i class="icon-phone"></i> Phone: 0039 333 12 68 347</p>
-                        <p><i class="icon-user"></i> Skype: Andia_Agency</p>
-                        <p><i class="icon-envelope-alt"></i> Email: <a href="">contact@andia.co.uk</a></p>
+                       <p><i class="icon-map-marker"></i> Address: Houston Texas</p>
+                        <p><i class="icon-phone"></i> Phone: 01800 luxurywerehouse</p>
+                        <p><i class="icon-user"></i> Skype: luxurywarehouse</p>
+                        <p><i class="icon-envelope-alt"></i> Email: <a href="">info@luxurywerehousestorage.com</a></p>
+                    </div>
                     </div>
                 </div>
                 <div class="footer-border"></div>
