--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         </div>
 
         <!-- Testimonials -->
-        <div class="testimonials container">
+        <div class="testimonials container hidden-phone">
             <div class="testimonials-title">
                 <h3>Testimonials</h3>
             </div>
