se oculto una seccion de la galeria
se oculto una parte del contenido de la galeria

--- a/portfolio.html
+++ b/portfolio.html
@@ -170,7 +170,7 @@
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
                         </div>
                     </li>
-                    <li data-id="p-9" data-type="web-design" class="span3">
+                     <!-- <li data-id="p-9" data-type="web-design" class="span3">
                         <div class="work">
                             <a href="assets/img/portfolio/work9.jpg" rel="prettyPhoto">
                                 <img src="assets/img/portfolio/work9.jpg" alt="">
@@ -179,7 +179,7 @@
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
                         </div>
                     </li>
-                    <li data-id="p-10" data-type="logo-design" class="span3">
+                     <li data-id="p-10" data-type="logo-design" class="span3">
                         <div class="work">
                             <a href="assets/img/portfolio/work10.jpg" rel="prettyPhoto">
                                 <img src="assets/img/portfolio/work10.jpg" alt="">
@@ -205,7 +205,7 @@
                             <h4>Ut Labore Print</h4>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
                         </div>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </div>
