--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,7 @@
                     <div class="span12">
                         <i class="icon-envelope-alt page-title-icon"></i>
                         <h2>Contact Us /</h2>
-                        <p>Here is how you can contact us</p>
+                        <p>Ask for a budget now</p>
                     </div>
                 </div>
             </div>
