integracion de contenido

--- a/about.html
+++ b/about.html
@@ -128,7 +128,7 @@
                         </p>
                     </div>
                     <div class="ca-button">
-                        <a href="">Try It Now!</a>
+                        <a href="contact.html">Buy Now!</a>
                     </div>
                 </div>
             </div>
