--- a/services.html
+++ b/services.html
@@ -186,7 +186,7 @@
                        <p>we are your <span class="violet">best choice</span> to store your most precious possessions with <span class="violet">unparalleled luxury and maximum safety.</span></p>
                     </div>
                     <div class="ca-button">
-                        <a href="">Buy Now!</a>
+                        <a href="contact.html">Buy Now!</a>
                     </div>
                 </div>
             </div>
